--- a/src/TelegramClone.Web/ClientApp/index.html
+++ b/src/TelegramClone.Web/ClientApp/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="AzadiyanChat">
   <link rel="manifest" href="manifest.webmanifest">
-  <link rel="apple-touch-icon" href="icons/icon-192x192.svg">
+  <link rel="apple-touch-icon" href="icons/azadiyan-180.png">
   <style>
     /* ============ DESIGN TOKENS — CSS Variables ============ */
     :root, [data-theme="classic"] {
